SigmaCodebackup3rdSep/objects/Default_Parameters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Approval_Process_Not_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>created flag to check Approval Process Not needed default</description>
        <inlineHelpText>Please make Sure Approval Process configured Properly.</inlineHelpText>
        <label>Approval Process Not Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Reserve_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Reserve Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Email__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_VAT__c</fullName>
        <label>Company VAT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Bin__c</fullName>
        <label>Default Bin</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Damaged_Location__c</fullName>
        <label>Default Damaged Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Location__c</fullName>
        <label>Default Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Vendor__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Create Auto Po from the Default vendor of the product when Product Inventory quantity goes below threshold quantity</inlineHelpText>
        <label>AutoPO Based On Default Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Zone__c</fullName>
        <label>Default Zone</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailImage__c</fullName>
        <label>EmailImage</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GanttURL__c</fullName>
        <label>GanttURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gantt_Library_Name__c</fullName>
        <label>Gantt Library Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <label>Inventory Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Doc_Id__c</fullName>
        <label>Invoice Doc Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>POId__c</fullName>
        <label>POId</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_to_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send an email notification to contact and generate po based on vendor and location</description>
        <inlineHelpText>Email notification to contact regarding PO submission</inlineHelpText>
        <label>PO to Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_ID__c</fullName>
        <label>Package ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_ID__c</fullName>
        <label>Shipment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowDispatchedQuantityInStockReceivingUI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show Dispatched Quantity In Stock Receiving UI (Display  Dispatched Quantity In Stock Receiving UI  which is commining 
 from vendor comminity)</description>
        <label>ShowDispatchedQuantityInStockReceivingUI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StockReceiving_ID__c</fullName>
        <label>StockReceiving ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Moment__c</fullName>
        <label>Stock Moment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Create Auto Po from the vendor name based on the Vendor Rating System when Product Inventory quantity goes below threshold quantity</inlineHelpText>
        <label>AutoPO Based On Vendor Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wastage_Amount_MR__c</fullName>
        <label>Wastage Amount (MR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>priceBook_for_orders__c</fullName>
        <description>Default standard pricebook for orders</description>
        <label>priceBook for orders</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Default Parameters</label>
</CustomObject>